Swagger update, added generated classes from swagger-gen
